# tzeva-adom

./: CMakeLists.txt  CONFIG.cpp  README.md  main.cpp
lang/: en.json  he.json  ru.json
locale/: OREF_localization.cpp  localization_get.cpp
models/: AlertMessage_OREF.cpp  AlertResponse.cpp  OrefAlertResponse.cpp
models/Interfaces/: IAlert.cpp  IAlertResponse.cpp
utils/: OREFToTzevaAdom.cpp  audio_play.cpp  check_file_exists.h  image_downloader.cpp  localization_manager.h
